--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>A website</title>
 </head>
 <body>
-AAA
+  <a href="https://www.reddit.com">Reddit</a>
+  <a href="http://www.swinburne.edu.au/">Swinburne</a>
+  
 </body>
 </html
