--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <title>A website</title>
 </head>
 <body>
-  <a href="https://www.reddit.com">Reddit</a>
-  <a href="http://www.swinburne.edu.au/">Swinburne</a>
-  
+  <table>
+    <tr><td><a href="https://www.reddit.com">Reddit</a></td>
+        <td><a href="http://www.swinburne.edu.au/">Swinburne</a></td>
+    </tr>
+    <tr>
+      <td><a href="https://www.google.com">Google</a></td>
+    </tr>
+  </table>
 </body>
 </html
