--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>A website</title>
+  <link rel="stylesheet" href="pages/stylesheet.css" type="text/css">
 </head>
 <body>
   <table>
