--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="pages/stylesheet.css" type="text/css">
 </head>
 <body>
+  <h1>A website</h1>
+  
   <table>
     <tr><td><a href="https://www.reddit.com">Reddit</a></td>
         <td><a href="http://www.swinburne.edu.au/">Swinburne</a></td>
