--- a/index.html
+++ b/index.html
@@ -5,15 +5,27 @@
   <link rel="stylesheet" href="pages/stylesheet.css" type="text/css">
 </head>
 <body>
-  <h1>A website</h1>
+  <h1><a href="https://watervapour.github.io">watervapour.github.io</a></h1>
+  
+  A website for an aggrigation of my interests.
   
   <table>
-    <tr><td><a href="https://www.reddit.com">Reddit</a></td>
-        <td><a href="http://www.swinburne.edu.au/">Swinburne</a></td>
+    <tr>
+      <td><a href="pages/warframe.html">
+        <img src="resources/warframe.png">Warframe
+        </img></a></td>
+      <td><a href="pages/blender.html">
+        <img src="resources/blender.png">Blender
+        </img></a></td>
     </tr>
     <tr>
-      <td><a href="https://www.google.com">Google</a></td>
+      <td><a href="https://www.google.com">TBD</a></td>
     </tr>
   </table>
+  <br><br>  
+  <br><br>
+  Links cos why not?
+  <a href="http://www.swinburne.edu.au/">Swinburne</a>
+  
 </body>
 </html
