--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="pages/stylesheet.css" type="text/css">
 </head>
 <body>
-  <h1><a href="https://watervapour.github.io">watervapour.github.io</a></h1>
+  <h1><a href="https://github.com/watervapour/watervapour.github.io">watervapour.github.io</a></h1>
   
   A website for an aggrigation of my interests.
   
