--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="resources/warframe.png">Warframe
         </img></a></td>
       <td><a href="pages/blender.html">
-        <img src="resources/blender.png">Blender
+        <img src="resources/blender-plain.png">Blender
         </img></a></td>
     </tr>
     <tr>
