--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <table>
     <tr>
       <td><a href="pages/warframe.html">
-        <img src="resources/warframe.png">Warframe
+        <img src="resources/warframe-logo.png">Warframe
         </img></a></td>
       <td><a href="pages/blender.html">
         <img src="resources/blender-plain.png">Blender
