--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <table>
     <tr>
       <td><a href="pages/warframe.html">
-        <img src="resources/warframe-logo.png">Warframe
+        <img src="resources/warframe-logo.png" height="75" width="200">
+        <br>Warframe
         </img></a></td>
       <td><a href="pages/blender.html">
-        <img src="resources/blender-plain.png">Blender
+        <img src="resources/blender-plain.png" height="64" width="200">
+        <br>Blender
         </img></a></td>
     </tr>
     <tr>
