--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <table>
     <tr>
       <td><a href="pages/warframe.html">
-        <img src="resources/warframe-logo.png" height="75" width="200">
+        <img class="greyscale" src="resources/warframe-logo.png" height="75" width="200">
         <br>Warframe
         </img></a></td>
       <td><a href="pages/blender.html">
-        <img src="resources/blender-plain.png" height="64" width="200">
+        <img class="greyscale" src="resources/blender-plain.png" height="64" width="200">
         <br>Blender
         </img></a></td>
     </tr>
