--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <img class="greyscale" src="resources/blender-plain.png" height="64" width="200">
         <br>Blender
         </img></a></td>
+	  <td><a href="pages/music.html">
+        <img class="greyscale" src="resources/Infineract/Retrograde.jpg" height="64" width="64">
+        <br>Music
+        </img></a></td>
     </tr>
     <tr>
       <td><a href="https://www.google.com">TBD</a></td>
