--- a/pages/music.html
+++ b/pages/music.html
@@ -10,10 +10,12 @@
 <br><br>
 <table>
 	<tr>
-		<img src="resources/Infineract/Retrograde.jpg">
+		<img src="resources/Infineract/Retrograde.jpg"></img>
 	</tr>
 	<tr>
-		<media type="audio" src="resources/Infineract/Retrograde.mp3"></media>
+		<audio>
+		<source src="resources/Infineract/Retrograde.mp3">"
+		</audio
 	</tr>
 	<tr>
 		A song made by some friends.
