--- a/pages/music.html
+++ b/pages/music.html
@@ -13,8 +13,8 @@
 		<img src="resources/Infineract/Retrograde.jpg"></img>
 	</tr>
 	<tr>
-		<audio>
-		<source src="resources/Infineract/Retrograde.mp3">"
+		<audio controls>
+		<source src="resources/Infineract/Retrograde.mp3" type="audio/mp3">
 		</audio
 	</tr>
 	<tr>
