music page fix?
Trying to get the music page to function.

--- a/pages/music.html
+++ b/pages/music.html
@@ -10,15 +10,19 @@
 <br><br>
 <table>
 	<tr>
-		<img src="resources/Infineract/Retrograde.jpg"></img>
+	<td>
+		<img src="resources/Infineract/Retrograde.jpg" width="400" height="400">
+	</td>
 	</tr>
 	<tr>
+	<td>
 		<audio controls>
-		<source src="resources/Infineract/Retrograde.mp3" type="audio/mp3">
-		</audio
+		<source src="resources/Infineract/Retrograde.mp3" type="audio/mpeg">
+		</audio>
+	</td>
 	</tr>
 	<tr>
-		A song made by some friends.
+	<td>A song made by some friends.</td>
 	</tr>
 </table>
 </body>
