--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
   
   <table>
     <tr>
-      <td><a href="pages/warframe.html">
-        <img class="greyscale" src="resources/warframe-logo.png" height="75" width="200">
+      <td><a href="../pages/warframe.html">
+        <img class="greyscale" src="../resources/warframe-logo.png" height="75" width="200">
         <br>Warframe
         </img></a></td>
-      <td><a href="pages/blender.html">
-        <img class="greyscale" src="resources/blender-plain.png" height="64" width="200">
+      <td><a href="../pages/blender.html">
+        <img class="greyscale" src="../resources/blender-plain.png" height="64" width="200">
         <br>Blender
         </img></a></td>
-	  <td><a href="pages/music.html">
-        <img class="greyscale" src="resources/Infineract/Retrograde.jpg" height="64" width="64">
+      <td><a href="../pages/music.html">
+        <img class="greyscale" src="../resources/Infineract/Retrograde.jpg" height="64" width="64">
         <br>Music
+        </img></a></td>
+      <td><a href="../pages/rainmeter.html">
+        <img class="greyscale" src="../resources/rainmeter-outrun-clock.png" height="64" width="64">
+        <br>Rainmeter
         </img></a></td>
     </tr>
     <tr>
