--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </table>
   <br><br>  
   <br><br>
-  Links cos why not?
+  Links cos why not?<br>
   <a href="http://www.swinburne.edu.au/">Swinburne</a><br>
   <a href="http://www.reddit.com/">Reddit</a><br>
   
