--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br>Music
         </img></a></td>
       <td><a href="../pages/rainmeter.html">
-        <img class="greyscale" src="../resources/rainmeter-outrun-clock.png" height="64" width="64">
+        <img class="greyscale" src="../resources/rainmeter-outrun-clock.PNG" height="64" width="64">
         <br>Rainmeter
         </img></a></td>
     </tr>
