--- a/pages/rainmeter.html
+++ b/pages/rainmeter.html
@@ -8,7 +8,7 @@
   <h1>Rainmeter</h1>
   <table>
   <tr>
-  <td><img src="../resources/rainmeter-outrun-clock.png"></td>
+  <td><img src="../resources/rainmeter-outrun-clock.PNG"></td>
   </tr>
   <tr>
 	<td>
