--- a/pages/template.html
+++ b/pages/template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>TITLE!</title>
-  <link rel="stylesheet" href="pages/stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="../pages/stylesheet.css" type="text/css">
 </head>
 <body>
   <h1>HEADER!</h1>
