--- a/pages/warframe.html
+++ b/pages/warframe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>warframe</title>
-  <link rel="stylesheet" href="pages/stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="../pages/stylesheet.css" type="text/css">
 </head>
 <body>
 
