--- a/pages/music.html
+++ b/pages/music.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Music</title>
-  <link rel="stylesheet" href="pages/stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="../pages/stylesheet.css" type="text/css">
 </head>
 <body>
 
@@ -11,13 +11,13 @@
 <table>
 	<tr>
 	<td>
-		<img src="/resources/Infineract/Retrograde.jpg" width="400" height="400">
+		<img src="../resources/Infineract/Retrograde.jpg" width="400" height="400">
 	</td>
 	</tr>
 	<tr>
 	<td>
 		<audio controls>
-		<source src="/resources/Infineract/Retrograde.mp3" type="audio/mpeg">
+		<source src="../resources/Infineract/Retrograde.mp3" type="audio/mpeg">
 		</audio>
 	</td>
 	</tr>
