--- a/pages/music.html
+++ b/pages/music.html
@@ -10,19 +10,43 @@
 <br><br>
 <table>
 	<tr>
-	<td>
+	<td colspan="2">
 		<img src="../resources/Infineract/Retrograde.jpg" width="400" height="400">
-	</td>
-	</tr>
-	<tr>
-	<td>
+		<br>
 		<audio controls>
-		<source src="../resources/Infineract/Retrograde.mp3" type="audio/mpeg">
+			<source src="../resources/Infineract/Retrograde.mp3" type="audio/mpeg">
 		</audio>
+		<br>
+	A song made by some <a href="https://soundcloud.com/infineract" target="_blank">friends</a>.
 	</td>
 	</tr>
 	<tr>
-	<td>A song made by some friends.</td>
+	<td colspan="2"><br><br>
+		I abused FL studio at one point, enjoy.<br>
+		(warning <i>loud</i> and atrocious)
+		<br><br>
+	</td>
+	</tr>
+	<tr>
+		<td>Upbeat:</td>
+		<td><audio controls>
+			<source src="../resources/music-me-upbeat.mp3" type="audio/mpeg">
+		</audio>
+		</td>
+	</tr>
+	<tr>
+		<td>RLinspired:</td>
+		<td><audio controls>
+			<source src="../resources/music-me-RLinspired.mp3" type="audio/mpeg">
+		</audio>
+		</td>
+	</tr>
+	<tr>
+		<td>b:</td>
+		<td><audio controls>
+			<source src="../resources/music-me-b.mp3" type="audio/mpeg">
+		</audio>
+		</td>
 	</tr>
 </table>
 </body>
