Wf drop search v0.1
Will now put what i want into a cell.

--- a/pages/warframe.html
+++ b/pages/warframe.html
@@ -3,10 +3,18 @@
 <head>
   <title>warframe</title>
   <link rel="stylesheet" href="../pages/stylesheet.css" type="text/css">
+  <script src="../pages/warframe-script.js"></script>
 </head>
 <body>
 
 <h1><a href="https://n8k6e2y6.ssl.hwcdn.net/repos/hnfvc0o3jnfvc873njb03enrf56.html">Warframe drop table</a></h1>
-
+	<br><br><br>
+	
+	<form onsubmit="return gogogo();">
+	<input type="text" id="searchbar" placeholder="search for">
+	<input type="submit" value="Submit">
+	</form>
+	<table id="wf-table">
+	</table>
 </body>
 </html>
