--- a/pages/warframe.html
+++ b/pages/warframe.html
@@ -12,6 +12,7 @@
 	
 	<form onsubmit="return gogogo();">
 	<input type="text" id="searchbar" placeholder="search for">
+	<input type="dropzone">
 	<input type="submit" value="Submit">
 	</form>
 	<table id="wf-table">
