--- a/pages/warframe.html
+++ b/pages/warframe.html
@@ -4,6 +4,7 @@
   <title>warframe</title>
   <link rel="stylesheet" href="../pages/stylesheet.css" type="text/css">
   <script src="../pages/warframe-script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
