--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </img></a></td>
     </tr>
     <tr>
-      <td><a href="https://www.google.com">TBD</a></td>
+      <td><a href="pages/paralaxing.html">Paralaxing</a></td>
     </tr>
   </table>
   <br><br>  
