--- a/pages/parallax.html
+++ b/pages/parallax.html
@@ -24,8 +24,8 @@
 </head>
 <body onmousemove="nudge()">
   <h1>Super amature paralaxing</h1>
-  <img src="../resources/paralax-outrun.png" height="500" width="800"style="top: 30px; left: 5px;" id="par-bg" class="parbg">
-  <img src="../resources/rainmeter-outrun-clock.png" height="64" width="64" style="top: 300px; left: 500px;" id="par-target" class="paralax">
+  <img src="../resources/parallax-outrun.png" height="500" width="800"style="top: 30px; left: 5px;" id="par-bg" class="parbg">
+  <img src="../resources/rainmeter-outrun-clock.PNG" height="64" width="64" style="top: 300px; left: 500px;" id="par-target" class="parallax">
   <br><br>
   <br>
   <p id="para">aaa</p>
