Added vid embed
Eidelon gameplay vid added.

--- a/pages/warframe.html
+++ b/pages/warframe.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CuKYFVoK73A" frameborder="0" allowfullscreen></iframe>
+
 <h1><a href="https://n8k6e2y6.ssl.hwcdn.net/repos/hnfvc0o3jnfvc873njb03enrf56.html">Warframe drop table</a></h1>
 	<br><br><br>
 	
