--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
   <table>
     <tr>
       <td><a href="pages/warframe.html">
-        <img class="greyscale" src="resources/warframe-logo.png" height="75" width="200">
+        <img class="greyscale" src="resources/warframe-logo.png" height="75" width="200"></img>
         <br>Warframe
-        </img></a></td>
+        </a></td>
       <td><a href="pages/blender.html">
-        <img class="greyscale" src="resources/blender-plain.png" height="64" width="200">
+        <img class="greyscale" src="resources/blender-plain.png" height="64" width="200"></img>
         <br>Blender
-        </img></a></td>
+        </a></td>
       <td><a href="pages/music.html">
-        <img class="greyscale" src="resources/Infineract/Retrograde.jpg" height="64" width="64">
+        <img class="greyscale" src="resources/Infineract/Retrograde.jpg" height="64" width="64"></img>
         <br>Music
-        </img></a></td>
+        </a></td>
       <td><a href="pages/rainmeter.html">
-        <img class="greyscale" src="resources/rainmeter-outrun-clock.PNG" height="64" width="64">
+        <img class="greyscale" src="resources/rainmeter-outrun-clock.PNG" height="64" width="64"></img>
         <br>Rainmeter
-        </img></a></td>
+        </a></td>
     </tr>
     <tr>
-      <td><a href="pages/paralaxing.html">Paralaxing</a></td>
+      <td><a href="pages/parallaxing.html">
+        <img class="greyscale" src="resources/parallax-bg.png"></img>
+        <br>Parallaxing
+        </a></td>
     </tr>
   </table>
   <br><br>  
