fixed link to parallax

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </a></td>
     </tr>
     <tr>
-      <td><a href="pages/parallaxing.html">
+      <td><a href="pages/parallax.html">
         <img class="greyscale" src="resources/parallax-bg.png"></img>
         <br>Parallaxing
         </a></td>
