--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </tr>
     <tr>
       <td><a href="pages/parallax.html">
-        <img class="greyscale" src="resources/parallax-bg.png"></img>
+        <img class="greyscale" src="resources/parallax-mountain-bg.png"></img>
         <br>Parallaxing
         </a></td>
     </tr>
