--- a/pages/parallax.html
+++ b/pages/parallax.html
@@ -1,39 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Parallax</title>
-  <link rel="stylesheet" href="../pages/stylesheet.css" type="text/css">
-  <script>
-	function parallaxMountain() {
-	var bg = document.getElementById("par-bg");
-	var rect1 = bg.getBoundingClientRect();
-	var xcent = rect1.left + rect1.width * 0.5;
-	var ycent = rect1.top + rect1.height * 0.5;
-	
-	var bgx = rect1.left;
-	var bgy = rect1.top;
-	
-	var x = event.clientX - xcent;
-	var y = event.clientY - ycent;
-	var xm1 = bgx + (x / 20); 
-	var ym1 = bgy + (y / 30);
-	var xm2 = bgx + (x / 10); 
-	var ym2 = bgy + (y / 15);
-	
-	document.getElementById("par-L1").style.left = xm1 + 'px';
-	document.getElementById("par-L1").style.top = ym1 + 'px';
-	document.getElementById("par-L2").style.left = xm2 + 'px';
-	document.getElementById("par-L2").style.top = ym2 + 'px';
-	
-	}
-  </script>
+	<title>Parallax</title>
+	<link rel="stylesheet" href="../pages/stylesheet.css" type="text/css">
+	<script src="../pages/parallax.js"></script>
 </head>
 <body>
   <h1>Super amature paralaxing</h1>
-  <div onmousemove="parallaxMountain()" id="parallax-mountain-div">
-	<img src="../resources/parallax-mountain-bg.png" height="200" width="500" id="par-bg" class="parallaxbg" style="z-index: -1; image-rendering: pixelated; position: absolute; ">
-	<img src="../resources/parallax-mountain-l1.png" height="200" width="500" id="par-L1" class="parallaxlayer" style="z-index: 1; image-rendering: pixelated; position: absolute; ">
-	<img src="../resources/parallax-mountain-l2.png" height="200" width="500" id="par-L2" class="parallaxlayer" style="z-index: 2; image-rendering: pixelated; position: absolute;">
+  <div onmousemove="parallax(this)" id="parallax-mountain">
+	<img src="../resources/parallax-mountain-bg.png" height="200" width="500" id="parallax-mountain-layer-0" class="parallaxbg"   style="z-index: -1; image-rendering: pixelated; position: absolute;" data="xRange: 0; yRange: 0; xInvert: 1; yInvert: 1;">
+	<img src="../resources/parallax-mountain-l1.png" height="200" width="500" id="parallax-mountain-layer-1" class="parallaxlayer" style="z-index: 1; image-rendering: pixelated; position: absolute;" data="xRange: 10; yRange: 5; xInvert: 1; yInvert: 1;">
+	<img src="../resources/parallax-mountain-l2.png" height="200" width="500" id="parallax-mountain-layer-2" class="parallaxlayer" style="z-index: 2; image-rendering: pixelated; position: absolute;" data="xRange: 20; yRange: 10; xInvert: 1; yInvert: 1;">
   </div>
   <br><br>
   <br><br>
