Parralax demo fixup

--- a/pages/parallax.html
+++ b/pages/parallax.html
@@ -20,11 +20,13 @@
   <br><br>
   <div id="parallax-madness" onmousemove="parallax(this)">
 	<img src="../resources/parallax-mountain-bg.png" height="200" width="500" class="pixel" id="parallax-madness-L0" style="z-index:-1;" data-xrange= "0" data-yrange= "0">
-	<img src="../resources/parallax-mountain-l1.png" height="200" width="500" class="pixel" id="parallax-mountain-L1" style="z-index: 1;" data-xrange="3" data-yrange= "2">
-	<img src="../resources/parallax-mountain-l1.png" height="200" width="500" class="pixel" id="parallax-mountain-L2" style="z-index: 2;" data-xrange="7" data-yrange= "5">
+	<img src="../resources/parallax-mountain-l1.png" height="200" width="500" class="pixel" id="parallax-madness-L1" style="z-index: 1;" data-xrange="-5" data-yrange= "-5">
+	<img src="../resources/parallax-mountain-l1.png" height="200" width="500" class="pixel" id="parallax-madness-L2" style="z-index: 2;" data-xrange="-10" data-yrange= "-5">
+	<img src="../resources/parallax-mountain-l2.png" height="200" width="500" class="pixel" id="parallax-madness-L3" style="z-index: 3;" data-xrange="5" data-yrange= "5">
+	<img src="../resources/parallax-mountain-l2.png" height="200" width="500" class="pixel" id="parallax-madness-L4" style="z-index: 4;" data-xrange="20" data-yrange= "5">
 	
 	 
- 
+	</div>
   <p id="para"></p>
 </body>
 </html>
