Rainmeter skin additions

--- a/pages/rainmeter.html
+++ b/pages/rainmeter.html
@@ -6,13 +6,26 @@
 </head>
 <body>
   <h1>Rainmeter</h1>
+  <br><br>
+  <p style="margin: left; padding:15;">
+  Some rainmeter skins some might be setup for alternate resolutions, I'll add instructions on how to customize later.
+  </p>
+  <br><br>
   <table>
   <tr>
   <td><img src="../resources/rainmeter-outrun-clock.PNG"></td>
+  <td>Music Controls</td>
+  <td>Music Visualiser</td>
   </tr>
   <tr>
 	<td>
 	<a href="../resources/rainmeter-outrun-clock.ini" download>Download here!</a>
+	</td>
+	<td>
+	<a href="../resources/MusicControls.mskin" download>Download!</a>
+	</td>
+	<td>
+	<a href="../resources/MusicVisualiser.mskin" download>Download!</a>
 	</td>
   </tr>
   </table>
