--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <img class="greyscale" src="resources/parallax-mountain-bg.png"></img>
         <br>Parallaxing
         </a></td>
+	  <td><a href="pages/js30/js30index.html">
+		JS 30 stuff
+	  </a></td>
     </tr>
   </table>
   <br><br>  
