--- a/pages/js30/1/1-drumkit.html
+++ b/pages/js30/1/1-drumkit.html
@@ -47,15 +47,15 @@
     </div>
   </div>
 
-  <audio data-key="65" src="1-sounds/clap.wav"></audio>
-  <audio data-key="83" src="1-sounds/hihat.wav"></audio>
-  <audio data-key="68" src="1-sounds/kick.wav"></audio>
-  <audio data-key="70" src="1-sounds/openhat.wav"></audio>
-  <audio data-key="71" src="1-sounds/boom.wav"></audio>
-  <audio data-key="72" src="1-sounds/ride.wav"></audio>
-  <audio data-key="74" src="1-sounds/snare.wav"></audio>
-  <audio data-key="75" src="1-sounds/tom.wav"></audio>
-  <audio data-key="76" src="1-sounds/tink.wav"></audio>
+  <audio data-key="65" src="sounds/clap.wav"></audio>
+  <audio data-key="83" src="sounds/hihat.wav"></audio>
+  <audio data-key="68" src="sounds/kick.wav"></audio>
+  <audio data-key="70" src="sounds/openhat.wav"></audio>
+  <audio data-key="71" src="sounds/boom.wav"></audio>
+  <audio data-key="72" src="sounds/ride.wav"></audio>
+  <audio data-key="74" src="sounds/snare.wav"></audio>
+  <audio data-key="75" src="sounds/tom.wav"></audio>
+  <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
 	window.addEventListener('keydown', function(e) {
