--- a/pages/js30/js30index.html
+++ b/pages/js30/js30index.html
@@ -11,8 +11,8 @@
   <a href="https://javascript30.com/">Javascript 30 is a thing that does the learn giving.</a>
   
   <ul>
-	<li><a href="1-drumkit.html">01 - Drum kit</a></li>
-  
+	<li><a href="1/1-drumkit.html">01 - Drum kit</a></li>
+	<li><a href="2/2-clock.html">02 - Clock</a></li>
   </ul>
 </body>
 </html>
