--- a/pages/js30/js30index.html
+++ b/pages/js30/js30index.html
@@ -13,6 +13,7 @@
   <ul>
 	<li><a href="1/1-drumkit.html">01 - Drum kit</a></li>
 	<li><a href="2/2-clock.html">02 - Clock</a></li>
+	<li><a href="3/3-cssvariables.html">03 - CSS Variables</a></li>
   </ul>
 </body>
 </html>
