Added Sequencer + js30:4
Added sequencer
and partly complete js30 #4

--- a/pages/js30/js30index.html
+++ b/pages/js30/js30index.html
@@ -14,6 +14,7 @@
 	<li><a href="1/1-drumkit.html">01 - Drum kit</a></li>
 	<li><a href="2/2-clock.html">02 - Clock</a></li>
 	<li><a href="3/3-cssvariables.html">03 - CSS Variables</a></li>
+	<li><a href="4/4-array.html">04 - Arrays</a></li>
   </ul>
 </body>
 </html>
