--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 	  <td><a href="pages/js30/js30index.html">
 		JS 30 stuff
 	  </a></td>
+	  <td>
+	  <a href="pages/sequencer.html">Step sequencer</a>
+	  </td>
     </tr>
   </table>
   <br><br>  
