--- a/pages/sidebar_b.html
+++ b/pages/sidebar_b.html
@@ -6,7 +6,7 @@
   <script src="../pages/sidebar_js.js"></script>
 </head>
 <body onload="sidebar()">
-  <h1>Side bar A!</h1>
+  <h1>Side bar B!</h1>
 
   <ul id="sidebar" class="sidebar">
   </ul>
