--- a/pages/music_2.html
+++ b/pages/music_2.html
@@ -9,20 +9,23 @@
   <h1>Music 2.0</h1>
 
   
-  <input type="button" value="<" onclick="previous()">
-  <input type="button" value="Play" onclick="playMusic()">
-  <input type="button" value=">" onclick="next()">
+  <input type="button" id="buttonPrev" value="<" onclick="previous()">
+  <input type="button" id="buttonPlay" value="Play" onclick="togglePause()">
+  <input type="button" id="buttonNext" value=">" onclick="next()">
   <br>
-  <input type="button" value="+" onclick="volUp()">
+  <input type="button" id="buttonVolU" value="▲" onclick="volUp()">
   <br>
-  <input type="button" value="-" onclick="volDown()">
+  <input type="button" id="buttonVolD" value="▼" onclick="volDown()">
   
   <div width="200" height="200" style="background:black;" onclick="playMusic()">
   aaa
   </div>
   aa
-  
-  
+  <ul class="songlist">
+    <li data-track="1" onclick="setTrack(this)">RL inspired</li>
+	<li data-track="2" onclick="setTrack(this)">upbeat</li>
+	<li data-track="3" onclick="setTrack(this)">Retrograde</li>
+  </ul>
   
   
   <audio data-song='1' src="../resources/music-me-RLinspired.mp3"></audio>
@@ -34,13 +37,15 @@
 	font-family: Helvetica;
   }
   
-  body {
+  html, body {
+    height: 100%;
     background: #0A0A0A;
     color: #D0D0D0;
   }
   
   h1 {
     font-family: Impact;
+	color: linear-gradient(red, yellow);;
   }
 </style>
 </html>
