--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         </a></td>
     </tr>
     <tr>
-      <td><a href="pages/parallax.html">
-        <img class="greyscale" src="resources/parallax-mountain-bg.png"></img>
-        <br>Parallaxing
+      <td><a href="pages/experiment_index.html">
+        <br>Experment index
         </a></td>
 	  <td><a href="pages/js30/js30index.html">
 		JS 30 stuff
