added validation to track an vol

--- a/pages/music_2.html
+++ b/pages/music_2.html
@@ -13,9 +13,9 @@
   <input type="button" id="buttonPlay" value="Play" onclick="togglePause()">
   <input type="button" id="buttonNext" value=">" onclick="changeTrack(+1)">
   <br>
-  <input type="button" id="buttonVolU" value="▲" onclick="volUp()">
+  <input type="button" id="buttonVolU" value="▲" onclick="changeVol(+0.1)">
   <br>
-  <input type="button" id="buttonVolD" value="▼" onclick="volDown()">
+  <input type="button" id="buttonVolD" value="▼" onclick="changeVol(-0.1)">
   
   <p id="info"/>
   
