--- a/pages/music_2.html
+++ b/pages/music_2.html
@@ -6,7 +6,7 @@
   <script src="./music_2.js"></script>
 </head>
 
-<body onload="init()">
+<body onload="initTracklist();init()">
   <h1>Music 2.0</h1>
   
   <input type="button" id="buttonPrev" value="<" onclick="changeTrack(-1)">
